samples/_failures_safe/1761609115_4ab0ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_154925fd.c: In function ‘main’:
./samples/SAFE/__tmp_154925fd.c:134: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_154925fd.c:133:5: error: expected declaration or statement at end of input
  133 |     if
      |     ^~
